@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Viewing a mailbox in smartmobile mode no longer resets the sortpref preference.
 * [mms] Allow all SMTP configuration parameters to be overridden in the backends configuration file (Request #11051).
 * [mms] Block images in HTML messages that appear to be sent from you by default, to prevent spammers form easily circumventing the block.
 * [jan] Fix setting default values for identity preferences.
